--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -63,7 +64,18 @@ dependencies {
     //preferences
     implementation "androidx.preference:preference-ktx:1.2.0"
 
+    // Koin for Android
+    implementation "io.insert-koin:koin-android:3.2.3"
+    testImplementation "io.insert-koin:koin-test-junit4:3.2.3"
+    testImplementation "io.insert-koin:koin-test:3.2.3"
+
+
+    //mockito
+    testImplementation "org.mockito:mockito-inline:4.5.1"
+    testImplementation 'org.mockito:mockito-core:4.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
 }
