--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,11 @@
 buildscript {
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        google()
+    }
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
