filter unit test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,11 @@ dependencies {
     //preferences
     implementation "androidx.preference:preference-ktx:1.2.0"
 
+    //Mockk
+    testImplementation "io.mockk:mockk:1.13.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
