--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,11 @@ dependencies {
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation('androidx.test.espresso:espresso-intents:3.5.1')
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
     androidTestImplementation('androidx.test:runner:1.5.2')
     androidTestImplementation('androidx.test:rules:1.5.0')
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
+//    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
 }
